[gd_scene load_steps=2 format=3 uid="uid://ct7ry4x8bhmgh"]

[ext_resource type="Script" path="res://Scripts/Components/progression_display.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_panel"]
bg_color = Color(0.12, 0.12, 0.18, 0.9)
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[node name="ProgressionDisplay" type="PanelContainer"]
custom_minimum_size = Vector2(0, 150)
theme_override_styles/panel = SubResource("StyleBoxFlat_panel")
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 15

[node name="VBox" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="XPLabel" type="Label" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(0.5, 1, 0.5, 1)
text = "+ 450 XP"
horizontal_alignment = 1

[node name="LevelUpContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2

[node name="LevelUpLabel" type="Label" parent="MarginContainer/VBox/LevelUpContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 32
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "üéâ LEVEL UP! 15 ‚Üí 16 üéâ"
horizontal_alignment = 1

[node name="AchievementsContainer" type="VBoxContainer" parent="MarginContainer/VBox"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="HeaderLabel" type="Label" parent="MarginContainer/VBox/AchievementsContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 26
theme_override_colors/font_color = Color(1, 0.84, 0, 1)
text = "üèÜ ACHIEVEMENTS UNLOCKED üèÜ"
horizontal_alignment = 1

[node name="AchievementsList" type="VBoxContainer" parent="MarginContainer/VBox/AchievementsContainer"]
layout_mode = 2
theme_override_constants/separation = 8
